height auto instead of 100% fixes section header offset on safari desktop

--- a/css/global-styles.css
+++ b/css/global-styles.css
@@ -550,7 +550,7 @@ html{
   justify-content: center;
   align-items: center;
   padding: 0; margin: 0;
-  height: 100%;
+  height: auto;
 }
 
 @media (max-width: 750px) {
